<resources>
    <string name="app_name">Man United Daily News</string>
    <string name="match_detail_gold_space">-</string>
    <string name="match_detail_event_minute">%d\'</string>
    <string name="match_detail_event_add_minute">%1$d + %2$d\'</string>
    <string name="match_detail_event_injury_time">+%d\'</string>
    <string name="match_detail_event_gold_assist">Assist: %s</string>
    <string name="match_detail_lineups_coach_name_s">%s</string>
    <string name="match_detail_lineups_team_scheme_s">%s</string>
    <string name="match_detail_substitution_title">Substitution</string>
    <string name="share_content">Everything about Manchester United FC in your hands now. Link: http://play.google.com/store/apps/details?id=</string>
    <string name="news_tab">News</string>
    <string name="match_tab">Match</string>
    <string name="follow_tab">Follow</string>
    <string name="red_devil_menu">News</string>
    <string name="videos_tab">Videos</string>
    <string name="more_menu">More</string>
    <string name="premierleague">Premier League</string>
    <string name="championsleague">Champions League</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="standing_pos">Pos</string>
    <string name="standing_team">Team</string>
    <string name="standing_played">P</string>
    <string name="standing_win">W</string>
    <string name="standing_draw">D</string>
    <string name="standing_loss">L</string>
    <string name="standing_goals">Goals</string>
    <string name="standing_points">P</string>
    <string name="match_detail_referee">Referee</string>
    <string name="match_detail_venue">Venue</string>
    <string name="transfer_history">Transfer history</string>
    <string name="league_fixtures_round">Round %d</string>
    <string name="squad_player_year_old">%d yrs</string>
    <string name="title_squad">Squad</string>
    <string name="player_detail_contract_util">Contract util %s</string>
    <string name="player_detail_nationality">Nationality</string>
    <string name="player_detail_height">%d cm</string>
    <string name="player_detail_height_text">Height</string>
    <string name="player_detail_preferred_foot_text">Preferred foot</string>
    <string name="player_detail_position_text">Position</string>
    <string name="player_detail_shirt_number_text">Shirt number</string>
    <string name="coach_detail_pref_formation_text">Pref. formation</string>
    <string name="coach_detail_matches_text">Matches</string>
    <string name="coach_detail_points_match_text">Points/Match</string>
    <string name="coach_detail_career">Career</string>
    <string name="coach_detail_points_per_match">Points per match</string>
    <string name="league_menu">Leagues</string>
    <string name="log_in_menu">Login or Signup</string>
    <string name="log_in_description">Please sign up or log in to leave a comment in news or topic</string>
    <string name="privacy_des"><u>Privacy Policy Terms of Use</u></string>
    <string name="remaining_time_des">In %1$d day %2$d hours</string>
    <string name="remaining_day">In %d days</string>
    <string name="remaining_hours">In %d hours</string>
    <string name="remaining_minutes">In %d minutes</string>
    <string name="past_day">%d days ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="past_hours">%d hours ago</string>
    <string name="past_hour">1 hour ago</string>
    <string name="past_min">%d min ago</string>
    <string name="now">Now</string>
    <string name="livescore_tab">LIVE</string>
    <string name="statistic_tab">STATISTIC</string>
    <string name="video_tab">VIDEO</string>
    <string name="comment_tab">COMMENT</string>
    <string name="lineup_tab">LINE-UP</string>
    <string name="all_news">Headline</string>
    <string name="trend_news">Hot</string>
    <string name="video_news">Transfer</string>
    <string name="about_match">MATCH</string>
    <string name="expert_news">COMMENTARY</string>
    <string name="performance_info">Today</string>
    <string name="recent_form_info">Recent form</string>
    <string name="latest_transfer_info">Latest transfers</string>
    <string name="arrivals_info">Arrivals</string>
    <string name="departure_info">Depatures</string>
    <string name="no_info">NO INFO</string>
    <string name="no_line_up">Line-ups will begin shortly before kick-off</string>
    <string name="no_stats">Data will appear after kick-off</string>
    <string name="info">Info</string>
    <string name="coach_info">Coach</string>
    <string name="foundation_info">Foundation date</string>
    <string name="venue_info">Venue</string>
    <string name="stadium_info">Stadium</string>
    <string name="capacity_info">Capacity</string>
    <string name="city_info">City</string>
    <string name="club_tab">Club</string>
    <string name="squad_tab">Squad</string>
    <string name="transfer_tab">Transfer</string>
    <string name="legend_tab">Legends</string>
    <string name="wags_tab">Backstage</string>
    <string name="fixture_tab">Fixtures</string>
    <string name="matchday_tab">Match Day</string>
    <string name="standing_tab">Standing</string>
    <string name="setting_menu">Settings</string>
    <string name="best_player_info">Best player</string>
    <string name="notification_setting">Notification</string>
    <string name="breaking_news_setting">Breaking news</string>
    <string name="comment_setting">Comment notifications</string>
    <string name="general_setting">General</string>
    <string name="language_setting">Language</string>
    <string name="rate_setting">Rate our application</string>
    <string name="cache_setting">Clear cache</string>
    <string name="none_option">None</string>
    <string name="fifteen_minute_option">15 minutes before</string>
    <string name="thirty_minute_option">30 minutes before</string>
    <string name="one_hour_option">1 hour before</string>
    <string name="pre_match_info">Pre-match</string>
    <string name="next_news">Next</string>
    <string name="no_comment">Be the first one comment</string>
    <string name="add_comment">Add a comment here</string>
    <string name="comment_activity">Comments</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in">Or</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="log_in_success_title">YOU ARE LOGGED IN</string>
    <string name="log_out">LOG OUT</string>
    <string name="finish_log_in">CONTINUE</string>
    <string name="error_login_message">Login failed: %s</string>
    <string name="welcome_title">Profile</string>
    <string name="test_device_oneplus_3" translatable="false">118C0E3617A142EDF7CE24E485631A20</string>
    <string name="test_device_honor_6" translatable="false">E43D79007EC93EBAA6B24FC5A1771C6D</string>
    <string name="test_device_htc_one_m8" translatable="false">8F41413C950FF0509CECFF6C1EC8FEFC</string>
    <string name="please_login_to_post_comments">Please login to post comments</string>
    <string name="news_detail_comment">Comment</string>
    <string name="sponsored">Sponsored</string>
    <string name="create_account">Create Account</string>
    <string name="update_profile">Update</string>
    <string name="update_info_btn">Update Information</string>
    <string name="team_name">Team Name</string>
    <string name="ball_possession">Ball Possession</string>
    <string name="shots_on_goal">Shots on Goals</string>
    <string name="total_shot">Total shots</string>
    <string name="fouls">Fouls</string>
    <string name="corner_kick">Corner kicks</string>
    <string name="offside">Offsides</string>
    <string name="yellow_card">Yellow Cards</string>
    <string name="goalkeeper">Goalkeeper saves</string>
    <string name="full_name">Full name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="re_pass">Re-type password</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="manager_career_start_end_time" translatable="false">%1$s - %2$s</string>
    <string name="manager_career_start_time" translatable="false">%s</string>
    <string name="match_announc_setting">Match announcement</string>
    <string name="kickoff_setting">Kick-off</string>
    <string name="goals_setting">Goals</string>
    <string name="card_setting">Cards</string>
    <string name="result_setting">Result</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="out_from_app_alert">You are now leaving MAN UTD NEWS</string>
    <string name="dont_host">The third party website that you are about to visit is not hosted by MAN UTD
        NEWS</string>
    <string name="read_our_privacy"><u>Rights holder? Read our policy</u></string>
    <string name="dont_have_responsible">MAN UTD NEWS are not responsible for and can not be held accountable
        for any content, such as audio-visual content, that you may find on this third party hosted website</string>
    <string name="watch_video">Go to video</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="edt_empty_message">Please enter the field!</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="update_user_profile_success">Update user profile success!</string>
    <string name="update_user_profile_fail">Update fail!</string>
    <string name="register_user_fail">Register user fail!</string>
    <string name="login_user_profile_fail">Login fail!</string>
    <string name="update_user_avatar_success">Update user avatar success!</string>
    <string name="update_user_avatar_fail">Update user avatar fail!</string>
    <string name="language_english">English</string>
    <string name="language_vietnam">Vietnamese</string>
    <string name="language_french">French</string>
    <string name="language_thai">Thai</string>
    <string name="select_language">Select language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="cancel_match">Canceled</string>
    <string name="no_news_data">There is no news in this item</string>
    <string name="title_network_error">Connection error</string>
    <string name="body_network_error">No network connection or unstable. Please check and try again</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="clear_cache_description">Click to clear cached data</string>
    <string name="body_confirm_clear_cache_dialog">Do you want to clear cached data?</string>
    <string name="clear_cached_data_success">Clear cached data successfully</string>
    <string name="share_via">Share to friend</string>
    <string name="confirm_exit">Click Back again to exit</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="report">Report</string>
    <string name="in_progress_sign_in">Sign in....</string>
    <string name="back_to_app">Back to app</string>
    <string name="comment_detail_news">Newest comments</string>
    <string name="to_be_your_first_comment">Comment for this article</string>
    <string name="load_more_comments">Load more comments</string>
</resources>