<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/draw_circle_color"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:fontFamily="Roboto-Thin"
        android:textColor="@color/text_color_common"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_standard"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="Roboto-Thin"
            android:paddingLeft="15dp"
            android:text="@string/standing_team"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_played"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_win"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_draw"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_loss"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_goals"
            android:textColor="@color/lightBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="Roboto-Thin"
            android:gravity="center_horizontal"
            android:text="@string/standing_points"
            android:textColor="@color/lightBlack" />
    </LinearLayout>


</LinearLayout>