<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_margin_standard"
            android:text="@string/recent_form_info"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/navigation_title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lv_team_detail_performances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_margin_standard"
            android:layout_marginTop="@dimen/activity_margin_standard"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard"
            android:text="@string/latest_transfer_info"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/navigation_title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lv_team_detail_latest_arrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrivals_info"
                    android:textAlignment="center"
                    android:textColor="@color/player_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_team_detail_latest_departure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_info"
                    android:textAlignment="center"
                    android:textColor="@color/player_value" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_margin_standard"
            android:layout_marginTop="@dimen/activity_margin_standard"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard"
            android:text="@string/info"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/navigation_title_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/btn_team_detail_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_margin="@dimen/activity_margin_standard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/coach_info"
                android:textColor="@color/text_color_common" />

            <TextView
                android:id="@+id/tv_team_detail_manager_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/img_team_detail_manager"
                android:layout_toStartOf="@+id/img_team_detail_manager"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_margin_standard"
                android:layout_marginEnd="@dimen/activity_margin_standard"
                android:textColor="@color/player_value" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_team_detail_manager"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/foundation_info"
                android:textColor="@color/text_color_common" />

            <TextView
                android:id="@+id/tv_team_detail_found_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_common" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_margin_standard"
            android:layout_marginTop="@dimen/activity_margin_standard"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard"
            android:text="@string/venue_info"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/navigation_title_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/stadium_info"
                android:textColor="@color/text_color_common" />

            <TextView
                android:id="@+id/tv_team_detail_stadium_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_common" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/capacity_info"
                android:textColor="@color/text_color_common" />

            <TextView
                android:id="@+id/tv_team_detail_stadium_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_common" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_standard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/city_info"
                android:textColor="@color/text_color_common" />

            <TextView
                android:id="@+id/tv_team_detail_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_color_common" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>